Table users {
  id bigserial [primary key]
  email varchar [unique]
  password_hash varchar
  enabled boolean
  created_at timestamp
}

Table projects {
  id bigserial [primary key]
  name varchar
  owner_id bigint
  created_at timestamp
}

Table tasks {
  id bigserial [primary key]
  title varchar
  status varchar
  project_id bigint
  created_at timestamp
}

Table otp_tokens {
  id bigserial [primary key]
  user_id bigint
  otp_hash varchar
  expires_at timestamp
  consumed_at timestamp
  attempt_count integer
  created_at timestamp
}

Ref: projects.owner_id > users.id
Ref: tasks.project_id > projects.id
Ref: otp_tokens.user_id > users.id